<resources>
    <string name="app_name">Ready Set App v1</string>

    <!--Login Activity-->
    <string name="title_activity_login_page2">LoginPage2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">username</string>
    <string name="prompt_Username">Username</string>
    <string name="title_activity_workspaces">Workspaces</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Upload Activity-->
    <string name="insert_google_docs_link_here">Link</string>
    <string name="get_shareable_link">Get shareable link</string>
    <string name="get_shareable_name">Document Name</string>
    <string name="submit">Submit</string>

    <!--Somewhere?-->
    <string name="element_text">Example title</string>
    <string name="example_reviewer_username">Example reviewer username</string>
    <string name="tap_to_view_feedback">Tap to view feedback</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="review">Review</string>
    <string name="upload">Upload</string>
    <string name="feedback">Feedback</string>
    <string name="comments">Comments</string>
    <string name="comments_from_reviewer">Leave comments here</string>
    <string name="submit_prompt">Submit</string>
    <string name="confirmation_prompt">Would you like to submit these comments? You will no longer be able to add to or edit them.</string>
    <string name="confirmation_title">Submit?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_expand">Tap to expand</string>
    <string name="search_hint">Search for workspaces</string>
    <string name="exit_title">Exit?</string>
    <string name="exit_prompt">Would you like to exit and rate the review?</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="change_password_prompt">New Password:</string>
    <string name="choose_a_secure_password">Choose a secure password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="return_to_profile">Return to Profile</string>
    <string name="email_to_send_to">Email to send to:</string>
    <string name="return_to_login">Return to login</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign Out</string>
    <string name="points">Points:</string>
    <string name="tags">Tags:</string>
    <string name="change_password">Change Password</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="main_screen_logo">Main screen logo</string>
    <string name="sign_in">Sign In</string>
    <string name="register_prompt">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset</string>
    <string name="open_in_docs">Open in Docs</string>
    <string name="finished_reviewing">Finished Reviewing</string>
    <string name="rate_feedback">Rate Feedback</string>
    <string name="other_essays">Other Essays</string>
    <string name="profile_picture_square_image">Profile Picture Square Image</string>
    <string name="math">Math</string>
    <string name="english">English</string>
    <string name="social">Social</string>
    <string name="science">Science</string>

    <!--Tags-->
    <string-array name="subject_array">
        <item>eng</item>
        <item>hist</item>
        <item>math</item>
        <item>fren</item>
        <item>phys</item>
        <item>sci</item>
        <item>chem</item>
    </string-array>

</resources>