<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemIconTint="@drawable/bottom_nav_menu_selector"
    app:itemTextColor="@drawable/bottom_nav_menu_selector">

    <!--TODO: Get icons-->
    <item
        android:id="@+id/review"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/review" />

    <item
        android:id="@+id/upload"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/upload" />

    <item
        android:id="@+id/feedback"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/feedback" />

</menu>