<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">
    <RelativeLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/generic_profile_picture" />

        <View
            android:id="@+id/profileDividerTop"
            style="@style/divider"
            android:backgroundTint="@color/black"
            android:layout_below="@id/profilePicture"
            android:layout_margin="@dimen/margin_small" />

        <TextView
            android:id="@+id/profileUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileDividerTop"
            android:text="@string/username"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileUsername"
            android:text="@string/email"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/profileChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileEmail"
            android:text="@string/change_password"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/profileTagContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileChangePassword">

            <TextView
                android:id="@+id/profileTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/tags"
                android:textSize="24sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/profilePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileTagContainer"
            android:text="@string/points"
            android:textSize="24sp" />

        <View
            android:id="@+id/profileDividerBottom"
            style="@style/divider"
            android:backgroundTint="@color/black"
            android:layout_below="@id/profilePoints"
            android:layout_margin="@dimen/margin_small" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileDividerBottom"
            android:text="@string/sign_out"
            android:textSize="18sp" />

    </RelativeLayout>

</FrameLayout>