<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadFragment">

    <EditText
        android:id="@+id/link_input"
        style="@style/PossibleEditTextStyle"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="71sp"
        android:layout_marginBottom="296sp"
        android:autofillHints="@string/get_shareable_link"
        android:hint="@string/insert_google_docs_link_here"
        android:textColor="@color/black"
        android:textColorHint="@color/grayHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_input"
        style="@style/PossibleButtonStyle"
        android:textColor="@color/white"
        android:background="@color/pink"
        android:text="@string/submit"
        android:enabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_input"
        app:layout_constraintVertical_bias="0.052"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/primaryTag"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:contentDescription="Primary Tag"/>

        <Spinner
            android:id="@+id/secondaryTag"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:contentDescription="Secondary Tag" />
    </LinearLayout>

    <TextView
        android:id="@+id/uploadDescriptor"
        android:layout_width="213dp"
        android:layout_height="112dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="80dp"
        android:text="Upload a published Google Doc Link"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/link_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>