<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/activity_view_scene"
    tools:context=".FeedbackActivity">

    <ImageView
        android:id="@+id/bottomNavigationView"
        android:src="@drawable/swipe_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_gravity="bottom"
        android:alpha="0"
        android:background="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/commentSwipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/purple"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/comments"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="20dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@id/main_container"
        app:layout_constraintStart_toStartOf="@id/main_container"
        app:layout_constraintTop_toTopOf="@id/main_container"
        app:srcCompat="@drawable/swipe_bar"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:background="@color/pink"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:autoSizeMaxTextSize="20dp"
        app:autoSizeTextType="uniform"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <WebView
        android:id="@+id/documentView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/commentSwipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha="1"
        android:background="@color/white"
        android:hint="@string/comments_from_reviewer"
        android:importantForAutofill="no"

        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.motion.widget.MotionLayout>